# SPbGovV2

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .pylintrc  Dockerfile  manage.py  pyproject.toml
backend/core/: settings.py  urls.py
backend/user/: admin.py  apps.py  factories.py  models.py  permissions.py  serializers.py  tests.py  views.py
backend/user/analytic/: __init__.py
backend/user/analytic/clients/: __init__.py  base_client.py  redis_client.py
backend/user/analytic/clients/yougile_client/: __init__.py  schemas.py  yougile_client.py
backend/user/analytic/metrics/: __init__.py  base_metric.py  count_of_complete_tasks.py
backend/user/tests/models/: model_assert_pack.py  test_models.py
backend/user/tests/viewsets/: test_viewsets.py
