[tool.poetry]
name = "spbgovv2"
version = "0.1.0"
description = ""
authors = ["george <stroev20160@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.6"
psycopg2-binary = "2.9.9"
drf-yasg = "1.21.7"
pydantic = "2.8.2"
requests = "2.32.3"
redis = "5.0.7"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
